deployment/k8s-app-deployment.yaml
###################################
# auth
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: us-central1-docker.pkg.dev/abc-jobs-402104/abc-jobs-repository/auth
          ports:
            - containerPort: 3000
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: auth-microservice
  annotations:
    cloud.google.com/backend-config: '{"default": "auth-config"}'
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31019

---
